[package]
name = "llm"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "libs/tool_interface",
    "libs/tool_registry",
    "tools/price"
]

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8.4"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
async-trait = "0.1"
tower = { version = "0.5.2", features = ["retry", "limit", "util", "timeout"] }
toml = "0.8.23"
tool_registry = { path = "libs/tool_registry" }
secrecy = { version = "0.8.0", features = ["serde"] }
dotenvy = { version = "0.15.7"}
reqwest = { version = "0.12.22", features = ["native-tls"] }
tonic = "0.13.1"
uuid = { version = "1.16.0", features = ["v4"] }
ringbuffer = "0.16.0"
futures = "0.3.31"

reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"